--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+cryptography==37.0.2
+idna==3.3
 install==1.3.5
 kafka-python==2.0.2
+ndg-httpsclient==0.5.1
 py4j==0.10.9.3
+pyasn1==0.4.8
+pycparser==2.21
+pymongo==4.1.1
+pyOpenSSL==22.0.0
 pyspark==3.2.1
+requests==2.27.1
+urllib3==1.26.9
